# klayout-converter

./: .gitignore  README.md  flake.nix  pyproject.toml
examples/: gated_qd.json  gated_qd.oas  readme.md
src/: klayout_converter.py
